--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="dashboard.css">
+    <script defer src="dashboard.js"></script>
 </head>
 <body>
     <h1>Dashboard</h1>
     <p><%= username %></p>
+    <button onclick="logout()">Logout</button>
 </body>
 </html>
