changed usermanagement to auth

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Welcome</h1>
-    <a href="/usermanagement">Login / Register</a>
+    <a href="/auth">Login / Register</a>
 </body>
 </html>
