--- a/client/auth.html
+++ b/client/auth.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="usermanagement.css">
-    <script defer src="/usermanagement.js"></script>
+    <link rel="stylesheet" href="auth.css">
+    <script defer src="/auth.js"></script>
 </head>
 <body>
     <div id="login" class="page">
